# modern-renderer

./: .clang-format  .gitignore  .gitmodules  Buffers_8h.html  Buffers_8h.js  Buffers_8h__incl.map  Buffers_8h__incl.md5  Buffers_8h_source.html  CMakeLists.txt  CONTRIBUTING.md  Core_8h.html  Core_8h.js  Core_8h__incl.map  Core_8h__incl.md5  Core_8h_source.html  LICENSE  LICENSE-3RD-PARTY  README.md  README_8md.html  Structs_8h.html  Structs_8h.js  Structs_8h__dep__incl.map  Structs_8h__dep__incl.md5  Structs_8h__incl.map  Structs_8h__incl.md5  Structs_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_3465f0f0625cd3109a07a690a525d0f7.html  dir_3465f0f0625cd3109a07a690a525d0f7.js  dir_3465f0f0625cd3109a07a690a525d0f7_dep.map  dir_3465f0f0625cd3109a07a690a525d0f7_dep.md5  dir_38d06604e9df36157c4a7ee987c246f7.html  dir_38d06604e9df36157c4a7ee987c246f7.js  dir_38d06604e9df36157c4a7ee987c246f7_dep.map  dir_38d06604e9df36157c4a7ee987c246f7_dep.md5  dir_d10aa5f1e26260a914a037377583e9a7.html  dir_d10aa5f1e26260a914a037377583e9a7.js  files.html  (+15 more)
.github/workflows/: build-and-test.yaml  doxygen.yaml
docs/: Doxyfile  header.html
renderer/: CMakeLists.txt
renderer/include/render/: BufferAllocator.hpp  Buffers.h  Constants.hpp  Core.h  Logging.hpp  MVR.h  Renderer.hpp  Structs.h  Util.hpp  VulkanFunctionPointers.hpp
renderer/src/: Buffers.cpp  CompileHeaders.cpp  Core.cpp  Logging.cpp  Playground.cpp  Renderer.cpp  RendererUtil.cpp  Util.cpp
search/: all_0.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
test-app/: CMakeLists.txt
test-app/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
